--- a/src/Styles/InfoBar.css
+++ b/src/Styles/InfoBar.css
@@ -1,7 +1,71 @@
-.header-top{
-    background-color: #f5f5f5;
+.header-top {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.9rem;
+  font-weight: 400;
+  background-color: #f5f5f5;
+  height: 4em;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.col-lg-6 .col-md-6 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .header__top__left {
-    padding: 10px 0 13px;
+  padding: 10px 0 13px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.list_style_left {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  gap: 10em;
+  margin: 0;
+}
+
+.header__top__right {
+  display: flex;
+  text-align: right;
+  padding: 10px 0 13px;
+}
+
+.header__top__right__social {
+  position: relative;
+  display: flex;
+  margin-right: 35px;
+  gap: 2em;
+}
+
+.header__top__right__language {
+  position: relative;
+  display: flex;
+  margin-right: 40px;
+  cursor: pointer;
+}
+.header__top__right__auth {
+  display: flex;
+}
+
+.list_style_right {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2em;
 }
